<?xml version="1.0"?>
<package format="3">
  <name>client</name>
  <version>0.0.0</version>
  <description>Orin client bringup package</description>
  <maintainer email="chuntsehsu@gmail.com">cthsu</maintainer>
  <license>LicenseRef-WPVOL-1.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>