<?xml version="1.0"?>
<package format="3">
  <name>robot_diagnostics</name>
  <version>0.0.0</version>
  <description>Diagnostics aggregator for the robot</description>
  <maintainer email="chuntsehsu@gmail.com">cthsu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>